# RustDataSync

./: 5irechain.scale  Cargo.toml
migrations/2025-05-05-053514_blockchain_info/: up.sql
migrations/2025-05-14-094251_block_details/: down.sql  up.sql
src/: cli.rs  main.rs  models.rs  schema.rs
src/blockchain/: connection.rs  data.rs
src/rocket/: api.rs  cors.rs
